--- a/2nd_year_paper.tex
+++ b/2nd_year_paper.tex
@@ -18,58 +18,36 @@
 \maketitle
 
 
-
-\section{Introduction}
-
-What is the hole we are filling? (first to use a SWF in the allocation of public goods? And this is enabled by the generalized lindahl equilibrium concept)(How to improve mechanism design? That’s what research is ...)
-
-Because we allow consumer surplus to be taken into account, we can use a social welfare function when determining the optimal tax schedule (but doesn’t Ramsey pricing do this?)
-
-Discussion: we have proved the first welfare theorem but not the second?
-
-\begin{itemize}
-	\item big picture
 	
 	
-	Public goods require that we consider what is just, a normative topic that economics usually delegates to assumptions about utility and utilitarianism in general. Lindahl's (1919 [1958]) classical result concerning the optimal allocation of public goods is an opinion about what is just. He argues that a just outcome in the presence of a public good (hereafter a classical Lindahl outcome, or CLE) is one that provides the Pareto optimal level of the public good, raises individually rational taxes to finance the public good, and does so such that the taxes raised exactly equal the cost of the public good.
+	Public goods are an unusual topic in economics in the sense that they admit discussion about what is just, a normative topic in a field usually concerned with the positive. Erik Lindahl's classic result  (1919 [1958]) is really not a result at all, but an argument about what economic allocation is just in the presence of public goods and transfers. He argues that such an allocation should be Pareto optimal, and that individuals should be taxed according to the benefit they receive from the public goods such that the sum of all taxes exactly covers the cost of providing the public goods. His allocation is individually rational for individuals to accept and leaves them as well off as they can be, and so it is just, he argues. 
 	
 	
 	
 	
 	
-	
-	
-	
-	\item contribution
-	
-	This concept has become a standard by which theories of the provision of public goods are measured, yet it is inadequate. It does not take into account the distribution of surplus created by the taxes it proscribes. As we show, this uncontrolled margin allows for outcomes that we argue are unjust. In order to build a more rigorous standard, we introduce the concept of a generalized Lindahl equilbrium (GLE).
+	This concept has become a standard by which theories of the provision of public goods are measured, yet it is inadequate because it is restricted to linear taxation. It cannot take into account the distribution of surplus created by the taxes it proscribes. As we show, this uncontrolled margin allows for outcomes that are very unjust. In order to build a more rigorous standard, we introduce the concept of a generalized Lindahl equilbrium.
 	
 	
 	
 	
-	\item preview of results
 	
-	Our generalized Lindahl equilibrium has the Pareto optimality, individual rationality, and balanced budget of the classical result. In addition, it requires that each consumer must be given a personalized tax schedule instead of a single tax. If the preferences of a society concerning the surplus of its citizens can be represented by a social welfare function, this new margin of control allows those preferences to be included when calculating how to optimally provide a public good. We define the general form of such a problem and then solve an example with a CES welfare function. We then propose a mechanism for implementing generalized Lindahl equilibria when a central provider of the public good has incomplete information, and show that all of the Nash equilibria of games induced by this mechanism are generalized Lindahl equilibria. This mechanism is inspired by Walker's (1981) and so is called a generalized Walker mechanism.
+	Our generalized Lindahl equilibrium extends the classical result. It is Pareto optimality, individually rational, and balances the public budget, and it also requires that individuals receive personalized tax schedules instead of a single personalized tax. 
+	This additional margin allows new problems to be solved. Suppose there is a public good present in an economy, and that the preferences of a society concerning the distribution of surplus in that economy can be represented by a social welfare function. Furthermore suppose the society wants to optimizes the distribution of surplus according to these preferences, provide a Pareto optimal allocation of goods, and finance the provision of the public good with taxes that are individually rational to accept. The outcome that achieves all of this is a generalized Lindahl equilibrium. We define the general form of this problem, and solve an example of it with a CES welfare function. We then propose a mechanism a theoretical society could use to implement generalized Lindahl equilibria when it has incomplete information. This mechanism is inspired by Walker's (1981) mechanism for attaining classical Lindahl allocations and so is called a generalized Walker mechanism. We show that all of the Nash equilibria of games induced by a generalized Walker mechanism are generalized Lindahl equilibria. 
 	
 		
-	\item lit review
 	
-	The literature concerning the theory of public goods has both economic and philosophical beginnings. As mentioned, the work of Lindahl (1919 [1958]) has influenced this paper the most. He asked, when two parties have equal political power but differing valuations of a public good, what level of the public good should be provided, and how should the cost of producing it be shared between the two? He argued that cost shares should be determined by the parties’ marginal valuations of public good at the level it is provided, and that the level provided should be that which maximizes the net gain of both parties. Beyond Lindahl there were the political philosophical considerations of Wicksell (1896 [1958]). He pointed out that the definition of justice is itself a problem, and argues for a simple solution, unanimity: in order to achieve economic justice, a society should unanimously choose both how public funds should be spent and how the burden of raising those funds should be shared by its constituents. Both Wicksell and Lindahl believed the burden placed on any individual should be proportional to the benefit they received from public spending. Lindahl's argument has proved to be the source of far more economic research. Two fields of study relate directly to our work here: (1) extensions of the concept of Lindahl equilibrium, and (2) mechanisms capable of implementing Lindahl equilibria. 
+	Our work traces its history back to that of Lindahl, as mentioned, and Wicksell (1896 [1958). Lindahl asked, when two parties have equal political power but different valuations of a public good, what level of the public good should be provided and how should it be paid for? He argued that each share of costs should be determined by each party’s marginal valuations of the public good at the level it is provided, and that the level provided should be that which maximizes the net gain of both parties. Wicksell pointed out that the definition of justice is itself a problem, and argues for a simple solution, unanimity: in order to achieve economic justice, a society should unanimously choose both how public funds should be spent and how the burden of raising those funds should be shared by its constituents. The individual rationality of Lindahl's result achieves this. Wicksell also believed the burden to pay for a public good placed on any individual should be proportional to the benefit they received from it. Lindahl and Wickell's 
+		
+	We contribute to a body of work that has extended the classical theory of Lindahl equilibrium. This work has aimed to correct the classic theory's lack of structure and inability to deal with certain economic settings. Foley (1970) rigorously stated Lindahl's result and then studied how it related to core theory (the core of an economy is the set of outcomes that optimizing agents converge to) and showed that all Lindahl equilibria are in the core of an economy. Kaneko (1977) pointed out that Lindahl's equilibrium does not dictate how profits should be redistributed, and so in the presence of profits (i.e. non-linear costs), not all Lindahl equilibria are in the core of the economy. He created a version of Lindahl's equilibrium that avoided this problem: he introduced the concept of a ratio equilibrium, in which the total costs of production of public goods are distributed among consumers according to a vector of ratios, such that the costs of provision are exactly covered and no firm earns profits. The problem of how profits should be redistributed would not be addressed until Mas-Colell and Silvestre (1989), who created the concept of cost-share equilibrium. Their theory endogenously determines profit shares for a public firm, and shows that profits should be distributed according to the benefit an individual receives from a public good. This result built on Mas-Colell's (1980) previous work, in which he showed that Lindahl's original result is still efficient and able to be attained in a decentralized manner when costs do not have a linear structure. Diamantaras and Gilles (1996) extended this result by showing it continues to hold in the presence of an arbitrary number of private goods.  
 	
-	Extensions of Lindahl's original work were motivated by its lack of structure or inability to deal with certain economic settings. Foley (1970) rigorously stated Lindahl's result and then studied how it related to core theory (the core of an economy is the set of outcomes that optimizing agents converge to) and showed that all Lindahl equilibria are in the core of an economy. Kaneko (1977) pointed out that Lindahl's equilibrium does not dictate how profits should be redistributed, and so in the presence of profits (i.e. non-linear costs), not all Lindahl equilibria are in the core of the economy. He created a version of Lindahl's equilibrium that avoided this problem: he introduced the concept of a ratio equilibrium, in which the total costs of production of public goods are distributed among consumers according to a vector of ratios, such that the costs of provision are exactly covered and no firm earns profits. The problem of how profits should be redistributed would not be addressed until Mas-Colell and Silvestre (1989) created the concept of cost-share equilibrium, a theory of the ownership of the firm. Their model endogenously determines profit shares for a public firm, and shows that profits should be distributed according to the benefit an individual receives from a public good. This result built on Mas-Colell's (1980) previous work, in which he showed that Lindahl's original result holds when the costs of providing public goods has a non-linear structure: Lindahl's result is still efficient and able to be attained in a decentralized manner. Later, Diamantaras and Gilles (1996) showed that this continues to hold in the presence of an arbitrary number of private goods.  
+	Our generalized Walker mechanism contributes to the study of mechanisms capable of implementing socially desirable outcomes in the presence of public goods. In particular, the mechanisms of Groves and Ledyard (1977), Hurwicz (1979), and Walker (1981) all provided solutions to the free rider problem. Groves and Ledyard's mechanism is incentive compatible and was shown to implement the first and second theorems of welfare economics as well, but it is not always individually rational. Walker's mechanism addressed this issue by designing a mechanism whose outcomes were always Lindahl allocations, and so individually rational by definition. Varian (1994a) provides a mechanism inspired by Coase-ian negotiation that addresses the problem of how to set a Pigovian tax when net social benefits are unknown. Varian (1994b) then goes on to show that when contributions to a public good are made sequentially, total contributions are never more than they are when made simultaneously. He introduces a mechanism capable of implementing Lindahl allocations in a sequential-move game involving cross-subsidization.
 	
-	Theories of mechanism design have studied the free rider problem inherent in public goods, with attention given to implementing Lindahl allocations in particular. Consumers have an incentive to misrepresent their valuations of a public good, and so benefit from the contributions of others towards its provision. When a government or social planner does not know the private valuations of individuals, a mechanism can be used to theoretically arrive at an optimal outcome. The mechanisms of Groves and Ledyard (1977), Hurwicz (1979), and Walker (1981) all provided solutions to the free rider problem. Groves and Ledyard's mechanism is incentive compatible and was shown to implement the first and second theorems of welfare economics as well, but it is not always individually rational. Walker's mechanism addressed this issue by designing a mechanism whose outcomes were always Lindahl allocations, and so individually rational by definition. Walker's economic setting and mechanism provide the inspiration for the economic setting and mechanism found in this paper. Varian (1994a) provides a mechanism inspired by Coase-ian negotiation that addresses the problem of how to set a Pigovian tax when net social benefits are unknown. Varian (1994b) then goes on to show that when contributions to a public good are made sequentially, total contributions are never more than they are when made simultaneously. He introduces a mechanism capable of implementing Lindahl allocations in a sequential-move game involving cross-subsidization.
-	
-	More recently, mechanism design theory concerning Lindahl allocations has shifted its focus from theoretical existence and implementability, to experimental implementability. In an experimental setting, participants often do not engage in equilibrium play: they do not carry out the best responses assumed in a Nash equilibrium. Participants instead begin out of equilibrium, and adjust their behavior as they play the same game repeatedly. If the theory behind a mechanism states that these players' responses should move toward a Nash equilibrium as they learn, then that equilibrium is stable. Experimental evidence suggests that such stable equilibria are more likely to be converged upon in an experimental setting (Chen 2002). Milgrom and Roberts (1990) derived a way to compute the upper and power bounds of the set of undominated strategies for supermodular games. If the set of undominated strategies is a singleton, then they argued that out of equilibrium play should eventually converge to a single Nash equilibrium, and that this convergence was robust to a number of different assumptions about learning. Mathevet (2010) attempts to use supermodular games to solve the dilemma in mechanism design that holds a mechanism can have either a simple structure or lead to a single equilibrium.  He introduces a method of mechanism design in which the interval between Nash equilibria is minimized. His method creates mechanisms robust to bounded rationality (i.e. out of equilibrium play). Healy and Mathevet (2012) go on to show that supermodularity is not always a sufficient condition for stability. They introduce contraction mechanisms. Such mechanisms lead to best response functions that are contraction mappings, which sequentially reduce the set of undominated strategies as agents repeatedly play a game and so lead to stable equilibria. Chen (2002) invents a family of supermodular mechanisms that achieves Lindahl allocations in a general economic environment. However, Van Esson (2013) shows that the supermodularity of Chen's mechanism is not a sufficient condition for stability. In the spirit of Chen and Healy and Mathevet, he addresses this issue by creating a mechanism that leads to stable Lindahl equilibria by ensuring that all best response mappings are contractions. 
-	
+	As we will discuss in section 5, our theory also has the potential to contribute to more recent work on mechanisms that not only deal with public goods but also implement equilibria that are stable. In an experimental setting, participants often do not engage in equilibrium play: they do not carry out the best responses assumed in a Nash equilibrium. Participants instead begin out of equilibrium, and adjust their behavior as they play the same game repeatedly. If the theory behind a mechanism states that these players' responses should move toward a Nash equilibrium as they learn, then that equilibrium is stable. Experimental evidence suggests that such stable equilibria are more likely to be converged upon in an experimental setting (Chen 2002). In an effort to study such stable equilibria, Milgrom and Roberts (1990) derived a way to compute the upper and power bounds of the set of undominated strategies for supermodular games. If the set of undominated strategies is a singleton, then they argued that out of equilibrium play should eventually converge to a single Nash equilibrium, and that this convergence is robust to a number of different assumptions about learning. Mathevet (2010) attempts to use supermodular games to solve the dilemma in mechanism design that holds a mechanism can have either a simple structure or a single equilibrium. He introduces a method of mechanism design in which the interval between Nash equilibria is minimized. His method creates mechanisms robust to bounded rationality (i.e. out of equilibrium play). Healy and Mathevet (2012) go on to show that supermodularity is not always a sufficient condition for stability of equilibria. They introduce contraction mechanisms. Such mechanisms lead to best response functions that are contraction mappings, which sequentially reduce the set of undominated strategies and so lead to stable equilibria. Chen (2002) invents a family of supermodular mechanisms that achieves Lindahl allocations in a general economic environment. However, Van Esson (2013) shows that the supermodularity of Chen's mechanism is not a sufficient condition for stability. In the spirit of Chen and Healy and Mathevet, Van Essen creates a mechanism that leads to stable Lindahl equilibria by ensuring that all best response mappings are contractions. 
 	
 	
-	\item structure
+	The rest of this paper is structured as follows. Section 2 introduces the economic setting used throughout the paper, and describes a classical Lindahl equilibrium in this setting. Section 3 introduces the concept of generalized Lindahl equilibrium and shows how the concept can be used to solve a welfare maximization problem with a CES welfare function. Section 4 describes what we call a generalized Walker mechanism, and proves that any Nash equilibrium it implements is a generalized Lindahl equilibrium. Section 5 discusses the direction of future research. Section 6 concludes.
 	
-	The rest of this paper is structured as follows. Section 2 introduces the economic setting used throughout the paper, and describes a classical Lindahl equilibrium in this setting. Section 3 introduces the concept of generalized Lindahl equilibrium and shows how the concept can be used to solve a welfare maximization problem with a CES welfare function. Section 4 describes what we call a generalized Walker mechanism, and proves that it implements a generalized Lindahl equilibrium. Section 5 discusses the direction of future research. Section 6 concludes.
-	
-\end{itemize}
-
 
 \section{Setting}
 
