last update before send (hopefully)

--- a/2nd_year_paper.tex
+++ b/2nd_year_paper.tex
@@ -11,12 +11,16 @@
 \DeclareMathOperator*{\argmax}{arg\,max}
 \newcommand\numberthis{\addtocounter{equation}{1}\tag{\theequation}}
 
-\title{2nd year paper}
+\title{Generalized Lindahl Equilibria and a Generalized Walker Mechanism for Attaining Them}
 \author{Ivan Anich and Matt Van Essen}
+
 
 \begin{document}
 \maketitle
 
+\begin{abstract}
+We extend both the concept of Lindahl equilibria and Walker's mechanism to attain them. Lindahl's original result optimally allocates resources in an economy with a public good, but it does so without taking into account the distribution of consumer surplus. We show this can lead to unjust outcomes. Our generalized Lindahl equilibrium corrects this issue by giving each consumer a personalized tax schedule. It is Pareto optimal, individually rational, and covers the cost of the public good. We show how our concept could be used to distribute surplus according to preferences embodied in a social welfare function. We also introduce a mechanism capable of attaining generalized Lindahl equilibria when the private valuations of consumers are not known, a generalized Walker mechanism. We prove that any Nash equilibrium of a game induced by a generalized Walker mechanism is a generalized Lindahl equilibria.
+\end{abstract}
 
 	
 	The theory of public goods is concerned about what is just. Erik Lindahl's classic result (1919 [1958]) is an argument for how economic resources should be justly allocated in the presence of a public good. He argues that such an allocation should be Pareto optimal, and that individuals should be taxed according to the benefit they receive from the public good such that the sum of all taxes exactly covers the cost of providing it. His equilibrium is just because it is individually rational for individuals to accept the taxes administered to them and because it leaves those individuals as well off as they can be. It has become a standard by which theories of the provision of public goods are measured.
@@ -374,9 +378,9 @@ The point of complication arises in definition 3 with the message space \(M\). W
 
 Our generalized Lindahl equilibrium is an improvement on a classical Lindahl equilibrium. The classical result has desirable properties. It is Pareto optimal, individually rational, and covers the cost of providing a public good. But, it can lead to unjust outcomes because it does not take into account the distribution of consumer surplus. A generalized Lindahl equilibrium corrects this shortcoming, and retains all of the desirable features of a classical Lindahl equilibrium. 
 
-We have shown how a generalized Walker mechanism allows a social planner to attain a generalized Lindahl equilibrium when they do not know the private valuations of consumers. We have proved that any Nash equilibrium of a game induced by this mechanism is a generalized Lindahl allocation. In future research, we would like to prove that any generalized Lindahl allocation is achieved by a unique Nash equilibrium induced by our mechanism.
+We have shown how a generalized Walker mechanism allows a social planner to attain a generalized Lindahl equilibrium when they do not know the private valuations of consumers. We have proved that any Nash equilibrium of a game induced by this mechanism is a generalized Lindahl equilibrium. In future research, we would like to adjust our mechanism and prove that any generalized Lindahl equilibrium can be achieved by a unique Nash equilibrium.
 
-Lindahl's classical result is a standard by which public goods theories are measured. Our generalization is a better standard, because it is not satisfied by individuals merely being better off: \textit{how} they are better off matters, in relation to themselves and others. This new standard is applicable to any economy concerned with the distribution of surplus; and any economy that is not is potentially unjust.
+Lindahl's classical result is a standard by which public goods theories are measured. Our generalization is a better standard for certain economies, because it is not satisfied by individuals merely being better off: \textit{how} they are better off matters, in relation to themselves and others. This new standard is applicable to any economy concerned with the distribution of surplus; and any economy that is not is potentially unjust.
 
 
 \section*{Appendix}
